[tool.poetry]
name = "krestitki-noliki"
version = "0.1.0"
description = "game"
authors = ["Vjacheslav <goplit2010.konovalov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
